Resolve "Fix keyboard on mobile"

--- a/src/components/messages/messages-list/messages-list.component.scss
+++ b/src/components/messages/messages-list/messages-list.component.scss
@@ -15,6 +15,7 @@
   [message-list] {
     position: relative;
     overflow-y: auto;
+    overflow-x: hidden;
     flex: 1;
   }
 }
